[gd_scene load_steps=4 format=2]

[ext_resource path="res://Map/Pause.gd" type="Script" id=1]
[ext_resource path="res://Screens/main_theme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.709804 )

[node name="Pause" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="MarginContainer" type="CenterContainer" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = 1.0
margin_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 75.0
margin_top = 179.0
margin_right = 948.0
margin_bottom = 420.0
custom_constants/separation = 100
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 72.0
margin_bottom = 241.0

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CenterContainer"]
margin_top = 65.0
margin_right = 72.0
margin_bottom = 175.0

[node name="Resume" type="Button" parent="MarginContainer/HBoxContainer/CenterContainer/Buttons"]
margin_right = 72.0
margin_bottom = 34.0
text = "Resume"

[node name="Restart" type="Button" parent="MarginContainer/HBoxContainer/CenterContainer/Buttons"]
margin_top = 38.0
margin_right = 72.0
margin_bottom = 72.0
text = "Restart"

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/CenterContainer/Buttons"]
margin_top = 76.0
margin_right = 72.0
margin_bottom = 110.0
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 172.0
margin_right = 873.0
margin_bottom = 241.0

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_right = 701.0
margin_bottom = 241.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/MarginContainer"]
margin_right = 701.0
margin_bottom = 241.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Instructions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/MarginContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 681.0
margin_bottom = 221.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Instructions" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/MarginContainer/Instructions"]
margin_right = 661.0
margin_bottom = 48.0
text = "-- Context --
Space debris has been growing out of control, endangering sattelites and human-piloted missions alike.
When pieces of debris collide and break up, the danger to our planet and resources increases!"

[node name="Instructions2" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/MarginContainer/Instructions"]
margin_top = 68.0
margin_right = 661.0
margin_bottom = 99.0
text = "-- Mission --
Remove debris from orbit by dragging it to safety."

[node name="Instructions3" type="Label" parent="MarginContainer/HBoxContainer/MarginContainer/MarginContainer/Instructions"]
margin_top = 119.0
margin_right = 661.0
margin_bottom = 201.0
text = "-- Controls --
[A and D]        turn your ship.
[W or LMB]     activates your rocket in the direction of your mouse.
[S or RMB]      activates your brakes and slow down your ship.
[Space]           toggles your tractor beam."

[node name="CloseTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/CenterContainer/Buttons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/CenterContainer/Buttons/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/CenterContainer/Buttons/Quit" to="." method="_on_Quit_pressed"]
